fix: corrijo overflow de la pantalla

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,3 +51,10 @@ body {
   animation: move-vertical 2.5s infinite; /* Movimiento continuo hacia arriba y abajo */
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden; /* Evita el desplazamiento horizontal */
+}
+
